src/css/core/base.css
/* Make text look crisper and more legible in all browsers */
body {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}

/* Focus state style for keyboard navigation for the focusable elements */
*[tabindex]:focus-visible,
input[type="file"]:focus-visible {
  outline: 0.125rem solid #4d65ff;
  outline-offset: 0.125rem;
}

/* Set color style to inherit */
.inherit-color * {
  color: inherit;
}

/* Get rid of top margin on first element in any rich text element */
.w-richtext > :not(div):first-child,
.w-richtext > div:first-child > :first-child {
  margin-top: 0 !important;
}

/* Get rid of bottom margin on last element in any rich text element */
.w-richtext > :last-child,
.w-richtext ol li:last-child,
.w-richtext ul li:last-child {
  margin-bottom: 0 !important;
}

/* Set current link styles */
.w-richtext .w--current {
  filter: opacity(0.5);
}

/* Unset w-button class that randomly appears when you copy/paste */
.w-richtext .w-button {
  color: inherit;
  padding: unset;
  display: unset;
  background-color: inherit;
}

/* Make sure containers never lose their center alignment */
.container-medium,
.container-small,
.container-large {
  margin-right: auto !important;
  margin-left: auto !important;
}

/*
                Make the following elements inherit typography styles from the parent and not have hardcoded values.
                Important: You will not be able to style for example "All Links" in Designer with this CSS applied.
                Uncomment this CSS to use it in the project. Leave this message for future hand-off.
                */

a,
.w-input,
.w-select,
.w-tab-link,
.w-nav-link,
.w-dropdown-btn,
.w-dropdown-toggle,
.w-dropdown-link {
  color: inherit;
  text-decoration: inherit;
  font-size: inherit;
}
.w-checkbox {
  margin-bottom: unset;
  padding-left: unset;
}
.w-checkbox-input {
  margin: unset;
}
.w-checkbox::before {
  content: unset;
  display: none;
}

.w-form {
}

/* Apply "..." after 3 lines of text */
.text-style-3lines {
  display: -webkit-box;
  overflow: hidden;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
}

/* Apply "..." after 2 lines of text */
.text-style-2lines {
  display: -webkit-box;
  overflow: hidden;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

/* Adds inline flex display */
.display-inlineflex {
  display: inline-flex;
}

/* Blockquote override defaults */
blockquote {
  font-size: unset;
  line-height: unset;
}

/* These classes are never overwritten */
.hide {
  display: none !important;
}

@media screen and (max-width: 991px) {
  .hide,
  .hide-tablet {
    display: none !important;
  }
}
@media screen and (max-width: 767px) {
  .hide-mobile-landscape {
    display: none !important;
  }
}
@media screen and (max-width: 479px) {
  .hide-mobile {
    display: none !important;
  }
}

.margin-0 {
  margin: 0rem !important;
}

.padding-0 {
  padding: 0rem !important;
}

.spacing-clean {
  padding: 0rem !important;
  margin: 0rem !important;
}

.margin-top {
  margin-right: 0rem !important;
  margin-bottom: 0rem !important;
  margin-left: 0rem !important;
}

.padding-top {
  padding-right: 0rem !important;
  padding-bottom: 0rem !important;
  padding-left: 0rem !important;
}

.margin-right {
  margin-top: 0rem !important;
  margin-bottom: 0rem !important;
  margin-left: 0rem !important;
}

.padding-right {
  padding-top: 0rem !important;
  padding-bottom: 0rem !important;
  padding-left: 0rem !important;
}

.margin-bottom {
  margin-top: 0rem !important;
  margin-right: 0rem !important;
  margin-left: 0rem !important;
}

.padding-bottom {
  padding-top: 0rem !important;
  padding-right: 0rem !important;
  padding-left: 0rem !important;
}

.margin-left {
  margin-top: 0rem !important;
  margin-right: 0rem !important;
  margin-bottom: 0rem !important;
}

.padding-left {
  padding-top: 0rem !important;
  padding-right: 0rem !important;
  padding-bottom: 0rem !important;
}

.margin-horizontal {
  margin-top: 0rem !important;
  margin-bottom: 0rem !important;
}

.padding-horizontal {
  padding-top: 0rem !important;
  padding-bottom: 0rem !important;
}

.margin-vertical {
  margin-right: 0rem !important;
  margin-left: 0rem !important;
}

.padding-vertical {
  padding-right: 0rem !important;
  padding-left: 0rem !important;
}

/* Breakpoint overrides */

@media screen and (min-width: 768px) {
  [breakpoint="mobile"] {
    display: none;
  }
}
@media screen and (max-width: 767px) {
  [breakpoint="desktop-tablet"] {
    display: none;
  }
}

@media (max-width: 991px) {
  *:has(> [data-wf--u_visibility-control--variant="hide-tablet-down"]),
  *:has(> [data-wf--harvey-components-jan-25--u_visibility-control--variant="hide-tablet-down"]) {
    display: none;
  }
}

@media (max-width: 767px) {
  *:has(> [data-wf--u_visibility-control--variant="hide-mobile-landscape-down"]),
  *:has(> [data-wf--harvey-components-jan-25--u_visibility-control--variant="hide-mobile-landscape-down"]) {
    display: none;
  }
}

@media (max-width: 480px) {
  *:has(> [data-wf--u_visibility-control--variant="hide-mobile-portrait"]),
  *:has(> [data-wf--harvey-components-jan-25--u_visibility-control--variant="hide-mobile-portrait"]) {
    display: none;
  }
}

@media (min-width: 991px) {
  *:has(> [data-wf--u_visibility-control--variant="show-tablet-down"]),
  *:has(> [data-wf--harvey-components-jan-25--u_visibility-control--variant="hide-tablet-down"]) {
    display: none;
  }
}

@media (min-width: 767px) {
  *:has(> [data-wf--u_visibility-control--variant="show-mobile-landscape-down"]),
  *:has(> [data-wf--harvey-components-jan-25--u_visibility-control--variant="hide-mobile-landscape-down"]) {
    display: none;
  }
}

@media (min-width: 480px) {
  *:has(> [data-wf--u_visibility-control--variant="show-mobile-portrait"]),
  *:has(> [data-wf--harvey-components-jan-25--u_visibility-control--variant="hide-mobile-portrait"]) {
    display: none;
  }
}
/* ... */

